# coq-listset-utils

./: .gitignore  LICENSE  README.md  _CoqProject  coq-listset-utils.opam  dune-project
theories/: Basic.v  FoldLeftRight.v  FoldRight.v  MoreSets.v  NoDupPreservation.v  Remove.v  Tactics.v  Utils.v  dune
